# shiren

./: CLAUDE.md  Cargo.build-spec.json  Cargo.toml  flake.nix
src/: detect.rs  lib.rs  results.rs  runner.rs
src/adapters/: cargo.rs  jest.rs  mod.rs  pytest.rs
