[package]
name = "shiren"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Shiren (試練) — test runner framework for Neovim with language-specific adapters"
homepage = "https://github.com/pleme-io/shiren"
repository = "https://github.com/pleme-io/shiren"
readme = "README.md"
license = "MIT"
categories = ["text-editors"]
keywords = ["neovim", "testing", "neotest", "test-runner"]

[lib]
crate-type = ["cdylib", "rlib"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
nvim-oxi = { version = "0.5", features = ["neovim-0-11"] }
tane = { path = "../tane", version = "0.1.0" }
waku = { path = "../waku", version = "0.1.0" }
